# containers

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: debian.yml
compose/chains/cardano/: docker-compose.yml
compose/chains/ethereum/: docker-compose.yml
compose/chains/ipfs/: docker-compose.yml
compose/databases/mongo/: docker-compose.yml  stack.yml
compose/databases/postgres/: docker-compose.yml
compose/databases/redis/: docker-compose.yml
conduit/: Cargo.toml
conduit/src/: main.rs
debian/: Dockerfile
debian/lang/go/: Dockerfile
debian/lang/node/: Dockerfile
debian/lang/python/: Dockerfile
debian/lang/rust/: Dockerfile  nightly.dockerfile
debian/service/ipfs/iroh/: Dockerfile
debian/services/ethereum/: Dockerfile
debian/services/ipfs/: Dockerfile
debian/services/ipfs/iroh/: Dockerfile
lang/rust/: debian.dockerfile
nix/: Dockerfile
nix/lang/rust/: Dockerfile
photon/: Dockerfile
photon/go/: Dockerfile
photon/node/: Dockerfile
photon/python/: Dockerfile
photon/rust/: Dockerfile
wasm/: Dockerfile
wasm/trunk/: Dockerfile
wasm/wasm-pack/: Dockerfile
wasm/wasmer/: Dockerfile
