[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
description = "conduit is a simple developer utility, automating a number of containerization processes"
edition = "2021"
name = "conduit"
version = "0.1.0"

[dependencies]
bollard = "0.13.0"
futures = "0.3.25"
glob = "0.3.0"
nom = "7.1.1"
scsys = { features = ["full"], version = "0.1.21" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
tokio = { features = ["macros", "rt-multi-thread"], version = "1.21.2" }
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
